tlphone and pc. Deploy to Heroku

--- a/templates/components/_filter.html
+++ b/templates/components/_filter.html
@@ -3,18 +3,16 @@
     <h3>Filter by</h3>
   </div>
   <div class="row">
-    <div class="col-1">
+    <div class="col-12 col-md-1">
       <a class="btn btn-outline-dark mt-auto" href="{% url 'filter_expensive' %}"> Expensive </a>
     </div>
 
-    <div class="col-1">
+    <div class="col-12 col-md-1">
       <a class="btn btn-outline-dark mt-auto" href="{% url 'filter_cheap' %}"> Cheap </a>
     </div>
 
-    <div class="col-1">
+    <div class="col-12 col-md-1">
       <a class="btn btn-outline-dark mt-auto" href="{% url 'filter_likes' %}"> Likes </a>
     </div>
   </div>
 </div>
-
-
